# ECS251_Anders_Zach_Project

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: __init__.py  cpu_to_gpu.py  data_loading.py  training.py
configs/: data_loading_quick.yaml  dataload_workers.yaml  training_nsight.yaml
infra/: config.py  models.py  nsight.py  results.py  runner.py  system_info.py  timing.py
scripts/: plot_nsight.py  plot_strace.py  run_experiment.py  run_single.py
